--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
     <h1>Welcome to BazzarHive</h1>
     <p>Your One-Stop Shop for Everything!</p>
     <nav>
-      <a href="web.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="signup.html">Login</a>
       <a href="signup.html">Sign Up</a>
     </nav>
