--- a/todays-deals.html
+++ b/todays-deals.html
@@ -226,7 +226,7 @@
     <img class="logo" src="9kh_-removebg-preview.png"/>
     <!-- <div class="logo">BazzarHive</div> -->
     <nav>
-      <a href="web.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="todays-deals.html">Today's Deals</a>
       <a href="#">Customer Services</a>
